<resources>
    <string name="app_name">Quizats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_select_test">Select test</string>
    <string name="nav_start_test">Start test</string>
    <string name="load_test_from_zip">Load test from file</string>
    <string name="nav_exit">Exit</string>
    <string name="help">Help</string>
    <string name="help_create_test">How to create test</string>
    <string name="help_about_app">About application</string>

    <string name="fragment_app_config_lang">Select language</string>


    <string name="nav_test_settings_title">Test settings</string>
    <string name="nav_app_settings_title">App settings</string>




    <string name="save_button_label">Save</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="lang_ru">Russian</string>
    <string name="lang_en">English</string>
    <string name="initial_current_test">Current test:</string>
    <string name="initial_questions_in_quiz">Questions in selected quiz:</string>
    <string name="initial_cards_to_show">Cards to show:</string>
    <string name="initial_wrong_anwer_selector">Wrong answer:</string>
    <string name="initial_wrong_anwer_affects">Raises probability of displaying this card in future</string>
    <string name="initial_wrong_anwer_no_affect">Not affects probability of displaying this card in future</string>
    <string name="test_config_clear_right_answers_stat">Clear right answers statistics</string>
    <string name="nav_about">About</string>
    <string name="nav_help">Documentation</string>
    <string name="result_right_answers_count">"Right anwers is %s of "</string>
    <string name="result_right_answer">Right answer:</string>
    <string name="result_your_answer">Your answer:</string>
    <string name="initial_test_not_loaded_desc">Load test from file or choose from already loaded tests. To open menu swipe from left side of screen or touch ≡ symbol in left top corner of screen.</string>
    <string name="initial_test_not_loaded">Test not selected</string>
    <string name="open_file_no_permissions">Not enough permissions to open file</string>
    <string name="load_quiz_questions_absent">Questions file (quiz_questions.txt) is absent</string>
    <string name="load_quiz_metadata_absent">Quiz data file (quiz_metadata.txt) is absent</string>
    <string name="load_quiz_questions_parse_error">Error parsing questions file (quiz_questions.txt)</string>
    <string name="load_quiz_metadata_parse_error">Error parsing quiz data file (quiz_metadata.txt)</string>
    <string name="load_file_jpg_not_found">File %s.jpg is absent</string>
    <string name="load_quiz_success">Quiz files loaded successfully</string>
    <string name="test_config_immediately_show">Immediately show wrong answers</string>
    <string name="test_config_shuffle">Shuffle answers</string>

</resources>
