<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_select_test"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_select_test" />
        <item
            android:id="@+id/nav_start_test"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_start_test" />
        <item
            android:id="@+id/nav_test_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_test_settings_title" />
        <item
            android:id="@+id/nav_load_file"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/load_test_from_zip" />
        <item
            android:id="@+id/nav_app_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_app_settings_title" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_exit" />
    </group>

    <item android:title="@string/help">
        <menu>
            <item
                android:id="@+id/nav_hlp"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
